compile for Java, add classpath stuff